--- a/index.html
+++ b/index.html
@@ -178,6 +178,22 @@
   </div>
 </section>
 
+<section class="hero teaser">
+  <div class="container is-max-desktop">
+    <div class="hero-body">
+      <img src="./static/images/method_large.jpg"
+           alt="Method overview"
+           style="max-width: 100%; height: auto;"/>
+      <h2 class="subtitle has-text-centered">
+        Contractive Diffusion Policies – method overview.
+      </h2>
+    </div>
+  </div>
+</section>
+
+
+
+
 <!-- <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
