--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
-      <img src="./static/images/method_large.jpg"
+      <img src="static/images/method_large.jpg"
            alt="Method overview"
            style="max-width: 100%; height: auto;"/>
       <h2 class="subtitle has-text-centered">
