--- a/index.html
+++ b/index.html
@@ -52,11 +52,6 @@
   </div>
   <div class="navbar-menu">
     <div class="navbar-start" style="flex-grow: 1; justify-content: center;">
-      <a class="navbar-item" href="https://keunhong.com">
-      <span class="icon">
-          <i class="fas fa-home"></i>
-      </span>
-      </a>
 
       <!-- <div class="navbar-item has-dropdown is-hoverable">
         <a class="navbar-link">
@@ -172,7 +167,7 @@
               </span>
               <!-- Dataset Link. -->
               <span class="link-block">
-                <a href="https://github.com/google/nerfies/releases/tag/0.1"
+                <a href="https://drive.google.com/drive/folders/1BdLxgB0MaN5Pqm5qnB3_ukzPRu8HKQdj?usp=sharing"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="far fa-images"></i>
@@ -320,6 +315,22 @@
       </div>
     </div> -->
     <!--/ Paper video. -->
+  </div>
+</section>
+
+
+<section class="hero teaser" id="cdp-concept">
+  <div class="container is-max-desktop">
+    <div class="hero-body">
+      <img
+        src="./static/images/concept.jpg"
+        alt="Contractive Diffusion Policies concept (cone)"
+        style="max-width: 100%; height: auto;"
+      />
+      <h2 class="subtitle has-text-centered">
+        Contractive Diffusion Policies — Concept illustration.
+      </h2>
+    </div>
   </div>
 </section>
 
