--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         content="Contractive Diffusion Policies: Robust Action Diffusion via Contractive Score-based Sampling with Differential Equations.">
   <meta name="keywords" content="Diffusion Models, Imitation Learning, Reinforcement Learning">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Contractive Diffusion Policies: Robust Action Diffusion via Contractive Score-based Sampling with Differential Equations.</title>
+  <title>Contractive Diffusion Policies: Robust Action Diffusion via Contractive Score-Based Sampling with Differential Equations.</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script> -->
