--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@ is frozen, and the ODE sampling process generates the actions given observations
       Contractive Diffusion Policies (CDPs) enhance robustness by pulling noisy action trajectories
       closer together, mitigating solver and score errors while stabilizing learning.
     </p>
-    <figure class="image">
+    <figure class="image" style="margin-top:2.0rem;">
       <img src="./static/images/concept.jpg"
            alt="Contractive Diffusion Policies concept (cone)"
            style="max-width:100%;height:auto;" />
