--- a/index.html
+++ b/index.html
@@ -308,7 +308,8 @@ is frozen, and the ODE sampling process generates the actions given observations
     </figure>
 
     <p class="content" style="margin-top:1rem;">
-      The following figure shows how contraction affects the generated flows in a toy ODE. Comparing these flows to one in the first figure, we observe why contraction proves useful in diffusion sampling.
+      Prior work shows contraction in diffusion sampling reduces score-matching and discretization errors;
+      CDP adapts this with promoting contraction along reverse ODE trajectories.
     </p>
 
     <figure class="image" style="margin-top:2.0rem;">
